SUBDIRS = ptvbittorrent

activitydir = $(datadir)/sugar/activities/ptv/penguintv
activity_PYTHON =    \
	AddFeedDialog.py  \
	AddSearchTagDialog.py  \
	BTDownloader.py  \
	Downloader.py  \
	DownloadView.py  \
	EditSearchesDialog.py  \
	EditTagsMultiDialog.py  \
	EditTextTagsDialog.py  \
	EntryList.py  \
	EntryView.py  \
	FeedFilterDialog.py  \
	FeedFilterPropertiesDialog.py  \
	FeedList.py  \
	feedparser.py  \
	FeedPropertiesDialog.py  \
	FilterSelectorDialog.py  \
	GStreamerPlayer.py  \
	HTTPDownloader.py  \
	LoginDialog.py  \
	Lucene.py  \
	MainWindow.py  \
	MediaManager.py  \
	OPML.py  \
	penguintv.py  \
	PlanetView.py  \
	Player.py  \
	PreferencesDialog.py  \
	PTVAppSocket.py  \
	ptvDB.py  \
	ptv_sync.py  \
	RenameFeedDialog.py  \
	SimpleImageCache.py  \
	subProcess.py  \
	SynchronizeDialog.py  \
	ThreadPool.py  \
	timeoutsocket.py  \
	UpdateTasksManager.py  \
	utils.py


