activitydir = $(datadir)/sugar/activities/ptv/share
activity_PYTHON =         \
	defaultsubs.opml \
	penguintvbug.png \
	penguintv.glade \
	penguintvicon.png \
	penguintv.schema \
	gtkhtml.css \
	mozilla.css \
	mozilla-planet.css

install-data-local:
		sugar-setup-activity $(srcdir)/penguintv_olpc_icon.svg
