activitydir = $(datadir)/sugar/activities/ptv/penguintv/ptvbittorrent
activity_PYTHON =               \
	bencode.py \
	bitfield.py \
	btcompletedir.py \
	btformats.py \
	btmakemetafile.py \
	Choker.py \
	Connecter.py \
	CurrentRateMeasure.py \
	DownloaderFeedback.py \
	Downloader.py \
	download.py \
	Encrypter.py \
	fakeopen.py \
	HTTPHandler.py \
	__init__.py \
	NatCheck.py \
	parseargs.py \
	PiecePicker.py \
	RateMeasure.py \
	RawServer.py \
	Rerequester.py \
	selectpoll.py \
	spewout.py \
	Storage.py \
	StorageWrapper.py \
	testtest.py \
	track.py \
	Uploader.py \
	zurllib.py 
	
